--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -22,6 +22,7 @@
     <ion-row>
       <ion-col>
         <ion-button [routerLink]="['/main']" type="submit" color="danger" expand="block">Ingresar</ion-button>
+        <!--<ion-button (click)="goToMain()" type="submit" color="danger" expand="block">Ingresar</ion-button>-->
         <b></b><p></p><a [routerLink]="['/forgot-password']" class="small-text">¿Olvidaste tu contraseña?</a>
       </ion-col>
     </ion-row>
