--- a/src/app/main-tabs/noticias/noticias.page.html
+++ b/src/app/main-tabs/noticias/noticias.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>children</ion-title>
+    <ion-title> Noticias </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+<p> Test </p>
 </ion-content>
