--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -54,7 +54,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button></ion-back-button>
+      <!--<ion-back-button></ion-back-button>-->
     </ion-buttons>
     <ion-title>Menú principal</ion-title>
   </ion-toolbar>
@@ -63,21 +63,22 @@
 <ion-content>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="schedule">
-        <ion-icon name="calendar"></ion-icon>
-        <ion-label>Horario</ion-label>
-      </ion-tab-button>
-
-      <ion-tab-button tab="speakers">
-        <ion-icon name="contacts"></ion-icon>
-        <ion-label>Perfil</ion-label>
-      </ion-tab-button>
-
-      <ion-tab-button tab="map">
+      <ion-tab-button tab="noticias">
         <ion-icon name="ios-paper"></ion-icon>
         <ion-label>Noticias</ion-label>
       </ion-tab-button>
 
+      <ion-tab-button tab="circulares">
+        <ion-icon name="ios-document"></ion-icon>
+        <ion-label>Circulares</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="perfil">
+        <ion-icon name="ios-person"></ion-icon>
+        <ion-label>Perfil</ion-label>
+      </ion-tab-button>
+<!--
+      
       <ion-tab-button tab="about">
         <ion-icon name="ios-notifications"></ion-icon>
         <ion-label>Notificaciones</ion-label>
@@ -85,14 +86,9 @@
       </ion-tab-button>
 
       <ion-tab-button tab="about">
-        <ion-icon name="ios-document"></ion-icon>
-        <ion-label>Notas</ion-label>
-      </ion-tab-button>
-
-      <ion-tab-button tab="about">
         <ion-icon name="information-circle"></ion-icon>
         <ion-label>Información</ion-label>
-      </ion-tab-button>
+      </ion-tab-button> -->
 
     </ion-tab-bar>
   </ion-tabs>
